--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,10 @@
 title: Alejandro Martinez
 email: almartinez@unal.edu.co
 description: > # this means to ignore newlines until "baseurl:"
-  Pagina de Perfil Alejandro Martinez intereses, enlaces y proyectos desarrollada en Jekyll
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://iori11.github.io" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: alejinmartinez
+github_username:  iori11
 
 # Build settings
 markdown: kramdown
